syntax = "proto3";

package comment.service.v1;

import "google/api/annotations.proto";

option go_package = "comment-service/api/comment/service/v1;v1";


service Comment {
  // 发布评论：支持回复楼层、楼中楼。
  rpc CreateComment(CreateCommentReq) returns (CreateCommentResp){
    
  }
  // 读取评论：按照时间、热度排序
  rpc ListComments(ListCommentsReq) returns (ListCommentsResp){}
  // 删除评论：用户删除、作者删除
  rpc DeleteComments(DeleteCommentsReq) returns (DeleteCommentsResp){}
  // 管理评论：作者置顶
  rpc UpdateComment(UpdateCommentReq) returns (UpdateCommentResp){}
}

message CreateCommentReq {
  string obj_id = 1;
  string obj_type = 2;
  string message = 3;
  string MemberId = 4;
  int64 root = 5;
  int64 parent = 6;
  string ip = 7;
  string platform = 8;
  string Device = 9;
}

message CreateCommentResp {}

message UpdateCommentReq {}

message UpdateCommentResp {}

message DeleteCommentsReq{}

message DeleteCommentsResp {}

message ListCommentsReq{}

message ListCommentsResp {}